fixed all spacing issues and section 4 button

--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
 /*
 element styling for main page
 TODO:
-    - change text boldness? bold  or less bold
-    - make text justified in box subtext
-    - italic text
-    - make quote closer to thor part
-    - fix the button it's too goddamn annoying
-    - text in section 4 isn't close together for some reason
-    - right proportions (but optional)
+    - custom made to unflushable studios
  */
-
 
 /* fonts */
 @font-face {
@@ -79,7 +72,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 125px 0px;
+    padding: 100px 0px;
 }
 
 /* header */
@@ -133,6 +126,7 @@ footer {
 .subtext {
     text-align: center;
     font-size: 18px;
+    width: 170px;
 }
 
 /* section 3 */
@@ -148,6 +142,7 @@ footer {
     color: #1F2937;
     font-style: italic;
     font-weight: 100;
+    margin-bottom: 0px;
 }
 
 .section3 div {
@@ -159,17 +154,37 @@ footer {
 /* section 4 */
 .call-to-action {
     background-color: #3882F6;
-    padding: 50px 100px;
+    padding: 25px 100px;
     color:#E5E7EB;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    width: 1000px;
+    flex-basis: 50%;
 }
 
 .call-to-action button {
+    color:#E5E7EB;
     align-self: center;
+    padding: 5px 10px;
     background-color: #3882F6;
     border-color:#E5E7EB;
+    border-radius: 7px;
+    border-style: solid;
+    border-width: 2px;
+    white-space: nowrap;
+    padding: 7px 30px;
+    font-size: 15px;
+    text-emphasis: 300;
+}
+
+.call-to-action-text h3{
+    font-size: 20px;
+    margin-bottom: 4px;
+}
+
+.call-to-action-text p {
+    margin-top: 4px;
 }
 
 /* footer */
